# pyxis-gpio

./: .gitmodules  CMakeLists.txt  README.md  pyxis-gpio.service
example/: CMakeLists.txt
example/blink/: CMakeLists.txt  blink.c
inc/: gpio_backend.h  pyxis_gpio_comm.h  rpi_gpio_backend.h
src/: gpio_backend.h  pyxis_gpio.c  pyxis_gpio_comm.h  rpi_gpio_backend.c  rpi_gpio_backend.h
